--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <p>然后在body下必须要有一个#pages用于存放div</p> 
                 <p>每个div都是一个小页面,而且div中必须包含一个注释,</p>
                 <p>注释的内容为想要的背景图片的地址(绝对或相对路径都行)</p>
+                <a href="https://github.com/MoRanQingChen/Myfullpage.js/tree/gh-pages">图文详解</a>
             </div>
 
         </div>
